[gd_scene load_steps=17 format=3 uid="uid://ctdj7k4cwb4f6"]

[ext_resource type="Script" uid="uid://wpgykegedrya" path="res://Player/player.gd" id="1_abrql"]
[ext_resource type="Texture2D" uid="uid://d04jfatr1u7pf" path="res://assets/squirrel_anims1 (1).png" id="2_fkugw"]
[ext_resource type="PackedScene" uid="uid://bnubijqntw488" path="res://gun.tscn" id="3_sglur"]
[ext_resource type="PackedScene" uid="uid://chq2g34nmenr0" path="res://sword.tscn" id="4_bls4j"]
[ext_resource type="Script" uid="uid://bep3xxs0sc1p8" path="res://Player/hit_box.gd" id="5_fkugw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8fjmc"]
atlas = ExtResource("2_fkugw")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qiwj3"]
atlas = ExtResource("2_fkugw")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_26q78"]
atlas = ExtResource("2_fkugw")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bectd"]
atlas = ExtResource("2_fkugw")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvtmh"]
atlas = ExtResource("2_fkugw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7thud"]
atlas = ExtResource("2_fkugw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1qjk"]
atlas = ExtResource("2_fkugw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3ovn"]
atlas = ExtResource("2_fkugw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_abrql"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fjmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiwj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26q78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bectd")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvtmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7thud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1qjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3ovn")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fkugw"]
radius = 3.0
height = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sglur"]
radius = 6.0
height = 20.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 5
collision_mask = 11
motion_mode = 1
script = ExtResource("1_abrql")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_abrql")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["player"]]
position = Vector2(0, -3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_fkugw")

[node name="Gun" parent="." instance=ExtResource("3_sglur")]
position = Vector2(1, -6)

[node name="Sword" parent="." instance=ExtResource("4_bls4j")]
visible = false
position = Vector2(-22, 0)

[node name="PlayerHitBox" type="Area2D" parent="." groups=["player"]]
position = Vector2(0, -10)
collision_layer = 4
collision_mask = 11
script = ExtResource("5_fkugw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitBox"]
shape = SubResource("CapsuleShape2D_sglur")

[node name="InvincibleTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="PlayerHitBox" to="." method="_on_player_hit_box_area_entered"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincible_timer_timeout"]
